fix overflow in doubts section

--- a/app/styles/objects/o-doubt/o-doubt.scss
+++ b/app/styles/objects/o-doubt/o-doubt.scss
@@ -48,7 +48,17 @@
 		.reply {
 			width: 11%;
 		}
+	}
 
-
+	.doubt-body {
+		width: 100%;
+		
+		&:nth-child(n) {
+			white-space: pre-wrap;       
+			white-space: -moz-pre-wrap;  
+			white-space: -pre-wrap;      
+			white-space: -o-pre-wrap;    
+			word-wrap: break-word;
+		}
 	}
 }
